# phuyen-2026

./: .clasp.json  .dockerignore  .gitignore  Code.js  Dockerfile  docker-compose.yml  render.yaml
backend/: .env.example  README.md  package-lock.json  package.json  pyproject.toml
backend/app/: main.py  worker.py
backend/app/adaptation/: rebalancer.py
backend/app/adapters/: google_sheets.py  llm.py  media.py  sheet_cache.py  sheets_api_client.py  telegram.py
backend/app/ai/: action_engine.py  context_resolver.py  entity_resolver.py  workflow_reasoner.py
backend/app/api/: telegram.py
backend/app/behavior/: __init__.py  profile_engine.py
backend/app/civilization/: __init__.py  attention_guard.py  city_flow.py  collective_rhythm.py  emotional_geography.py  planetary_model.py
backend/app/collective/: experience_tracker.py  travel_dna.py
backend/app/companion/: __init__.py  chill_resolver.py  flow_orchestrator.py  movement_router.py
backend/app/conversation/: context_fusion.py  context_window.py  expense_merger.py  intent_continuation.py  session_engine.py  stream_engine.py  temporal_memory.py  topic_resolver.py
backend/app/core/: config.py
backend/app/dna/: travel_dna.py
backend/app/emotional/: __init__.py  emotional_memory.py  geography_engine.py  journey_modeler.py
backend/app/environment/: env_monitor.py
backend/app/ethics/: __init__.py  calm_technology.py
backend/app/evolution/: evolution_engine.py
backend/app/fatigue/: __init__.py  energy_engine.py
backend/app/intelligence/: __init__.py  analyzer.py  (+1 more)
backend/src/: index.js
(+743 files in other folders)
